--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=firstDemo
 
-spring.datasource.url=jdbc:mysql://localhost:3306/devops
+spring.datasource.url=jdbc:mysql://localhost:3306/testDevop?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Oper8566
